--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1> {{title }} </h1>
-<hr>
+<!-- <h1> {{title }} </h1>
+<hr> -->
 <!-- <h3> Counter: {{ counter }}</h3>
 
 <button (click)="increaseBy(+1)">+1</button>
@@ -7,6 +7,9 @@
 <button (click)="increaseBy(-1)">-1</button>
 
 <hr> -->
-<app-counter></app-counter>
+<!-- <app-counter></app-counter>
 <app-heroes-hero></app-heroes-hero>
-<app-heroes-list></app-heroes-list>
+<app-heroes-list></app-heroes-list> -->
+
+
+<app-dbz-main-page></app-dbz-main-page>
